Add AI Project Guide

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+# Electron output directory
+out/*
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
