--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "ai:dev": "pnpm run dev",
     "ai:build": "pnpm run build && pnpm run package",
     "ai:clean": "rm -rf out node_modules && pnpm install",
-    "ai:test": "pnpm run typecheck && pnpm run lint",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "ai:test": "pnpm run typecheck && pnpm run lint && pnpm run test:run",
     "ai:setup": "pnpm install && pnpm run typecheck",
     "setup-guides": "bash scripts/setup-guides.sh",
     "setup-guides:private": "bash scripts/setup-guides.sh && bash scripts/setup-guides-private.sh",
@@ -44,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
     "@vitejs/plugin-react": "^5.0.0",
+    "@vitest/ui": "^3.2.4",
     "electron": "^37.4.0",
     "electron-builder": "^26.0.12",
     "electron-vite": "^4.0.0",
@@ -53,6 +58,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "gray-matter": "^4.0.3",
+    "jsdom": "^26.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-external-links": "^3.0.0",
     "rehype-pretty-code": "^0.14.1",
@@ -67,7 +73,8 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
     "unist-util-visit": "^5.0.0",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
