--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "context-builder",
+  "name": "context-forge",
   "private": true,
   "version": "0.0.0",
   "description": "Context Forge - AI project context generation tool",
@@ -103,7 +103,7 @@
     "zod": "^4.1.5"
   },
   "build": {
-    "appId": "com.context-builder.app",
+    "appId": "com.context-forge.app",
     "files": [
       "out/**",
       "resources/**"
